<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_pesa">Talisman</string>
    <string name="app_chamapesa">Chamapesa</string>
    <string name="app_name">Chama Pesa</string>
    <string name="app_DIVA">chamaDIVA</string>
    <string name="menu_settings">Settings</string>
    <string name="title_menu">Menu</string>
    <string name="title_settings">Settings</string>
    <string name="title_help">Help</string>
    <string name="title_contracts">Contracts</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_things">Things</string>
    <string name="title_fromurl">From URL</string>
    <string name="title_issuer">Name of Issuer</string>
    <string name="title_short">Short Name</string>
    <string name="title_next">Next</string>
    <string name="title_options">Options</string>
    <string name="title_importcontract">Import Contract</string>
    <string name="title_createcontract">Create New Contract</string>
    <string name="title_contract_review">Review Contract (unsigned)</string>
    <string name="title_contract_mount">Register at Server</string>
    <string name="title_contract_agree">I agree, Sign it!</string>
    <string name="title_contract_issue">Issue units</string>
    <string name="title_contract_name">Contract Full Name</string>
    <string name="title_contract_short">Contract Short Name</string>
    <string name="title_contract_ipo">Initial issuance of Shares</string>
    <string name="title_contract">Contract</string>
    <string name="title_add">Add</string>
    <string name="title_new">New</string>
    <string name="title_download">Download</string>
    <string name="title_names_review">Review your Name</string>
    <string name="title_name">Your Full Name</string>
    <string name="title_full_name">Full Name</string>
    <string name="title_legal_name">Legal Name</string>
    <string name="title_nickname">Nick Name - friendly name by which everyone knows you</string>
    <string name="title_nickname2">Nick Name</string>
    <string name="title_phonenumber">Phone Number</string>
    <string name="title_phonenumber2">Phone #</string>
    <string name="title_send">Send</string>
    <string name="title_contacts">Contacts</string>
    <string name="invite_message">Please install the Talisman Android App in the Google play Store</string>
    <string name="sms_message">SMS Message sent Successfully</string>
    <string name="title_holding">Account</string>
    <string name="title_recipient">Recipient</string>
    <string name="title_payee_account">To Account</string>
    <string name="title_payer_account">Your Account</string>
    <string name="title_mint">Mint A/c</string>
    <string name="title_mgr">Treasurer</string>
    <string name="title_amount">Amount</string>
    <string name="title_freeze_enabled">FREEZE payment enabled!!!</string>
    <string name="title_enable_freeze">enable FREEZE to proceed?</string>
    <string name="title_pay">Pay</string>
    <string name="title_payment">Make Payment</string>
    <string name="title_passphrase">Passphrase</string>
    <string name="title_password">Password</string>
    <string name="title_repeatpassword">Repeat Password</string>
    <string name="title_register">Register</string>
    <string name="title_chat">Chat</string>
    <string name="title_sendpayment">Send Payment</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_change_pass">change Passphrase</string>
    <string name="button_things">Things</string>
    <string name="button_next">Next</string>
    <string name="button_change">Change</string>
    <string name="button_done">Done</string>
    <string name="button_photo">Photo</string>
    <string name="button_rename">Rename</string>
    <string name="button_back">Back</string>
    <string name="button_accept">Accept</string>
    <string name="button_send">Confirm Send</string>
    <string name="button_confirm_edit">Confirm Edit</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_clear">Clear</string>
    <string name="button_lookup">Lookup</string>
    <string name="button_retry">Retry</string>
    <string name="button_create_code">Create Code</string>
    <string name="button_clear_memo">Clear Memo</string>
    <string name="title_recommendcontract">Recommend Contract</string>
    <string name="title_viewdetail">View Detail</string>
    <string name="title_president">President</string>
    <string name="title_treasurer">Treasurer</string>
    <string name="title_chamaname">Name of Chama</string>
    <string name="title_create">Create</string>
    <string name="title_registration_number">Registration Number</string>
    <string name="title_monthlyamount">Monthly Amount</string>
    <string name="url_defaultcontract">http://webfunds.org/ricardo/contracts/webfunds/Pizza.asc</string>
    <string name="title_add_contract">Create Account</string>
    <string name="title_transactionlist">Transaction List</string>
    <string name="title_memo">Memo</string>
    <string name="title_from">From</string>
    <string name="title_enterintrocode">Enter IntroCode</string>
    <string name="title_introcode">IntroCode</string>
    <string name="title_createinvite">Create Invite</string>
    <string name="title_acceptinvite">Accept Invite</string>
    <string name="title_createintro">Intro Code</string>
    <string name="title_acceptintro">Accept Intro</string>
    <string name="title_passchange">Change Passphrase</string>
    <string name="title_passnew">New Passphrase</string>
    <string name="title_passenter">Enter Passphrase</string>
    <string name="title_passopen">Open</string>
    <string name="title_close">Close</string>
    <string name="title_edit">Edit</string>
    <string name="title_delete">Delete</string>
    <string name="title_newintrocode">New IntroCode</string>
    <string name="title_invitation">IntroCode,</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_pay_from_holding">Pay</string>
    <string name="title_withdraw">Withdraw</string>
    <string name="title_add_funds">Add Funds</string>
    <string name="title_paymentsubmitted">Payment Submitted</string>
    <string name="title_paymentsubmitted2">You will be notified when or if it clears</string>
    <string name="title_rename">Rename Persona</string>
    <string name="title_rename_holding">Rename</string>
    <string name="title_rename_others_holding">Rename Friend\'s Account</string>
    <string name="title_newname">Enter new name</string>
    <string name="title_photo">Photo</string>
    <string name="title_capture">Capture</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_picture">Take New Photo</string>
    <string name="button_photo_take">Take New Photo</string>
    <string name="button_photo_select">Select Photo</string>
    <string name="button_photo_upload">Nice, upload photo to Server</string>
    <string name="button_photo_save">Nice, save</string>
    <string name="text_photo_help">This Photo will help your friends to recognise you.</string>
    <string name="title_accept">Accept</string>
    <string name="title_noconnection">Please establish a data connection and retry</string>
    <string name="title_activity_things">Things</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_persona_details">Persona Details</string>
    <string name="action_settings">Settings</string>
    <string name="menu_persona_details">Details of Persona</string>
    <string name="title_activity_choose_counterparty">ChooseCounterpartyActivity</string>
    <string name="title_choose_counterparty">Choose who you wish to pay</string>
    <string name="title_choose_your_payee">Who are you paying?</string>
    <string name="title_renamecontract">Rename contract</string>
    <string name="title_read_contract">Read contract</string>
    <string name="title_to">To:</string>
    <string name="title_review_payment">Review payment</string>
    <string name="title_enter_name_new_account">Enter name of new account</string>
    <string name="title_refresh_holding">Refresh</string>
    <string name="title_show_others">Show Other Accounts</string>
    <string name="title_hide">Hide</string>
    <string name="title_choose_your_payee2">(choose person)</string>
    <string name="title_choose_your_payee_account2">(choose account)</string>
    <string name="title_choose_your_payee_account">Which account to pay?</string>
    <string name="title_current_pass">Your Passphrase</string>
    <string name="title_new_pass">New Passphrase</string>
    <string name="title_new_pass_confirm">Confirm New Passphrase</string>
    <string name="title_pass1">Enter new (1)</string>
    <string name="title_pass2">Enter new (2)</string>
    <string name="title_value">Value</string>
    <string name="title_tag">Tag</string>
    <string name="text_decrypt_database">Decrypt database, patience...</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="message_help">Lorem ipsum dolor sit amet.</string>
    <string name="title_add_thing">Add new thing</string>
    <string name="title_thing_name">Thing name</string>
    <string name="title_thing_value">Thing value</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">Mobile number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="action_create_account">Create Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_manage_group">ManageGroupActivity</string>
    <string name="title_activity_manage_member">ManageMemberActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_invitations">Invitations</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_palaver">Palaver</string>
    <string name="title_ledger">Ledger</string>
    <string name="title_quorum">Quorum</string>
    <string name="title_groups">Groups</string>
    <string name="title_activity_groups">GroupsActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <plurals name="members">
        <item quantity="zero">No members</item>
        <item quantity="one">1 Member</item>
        <item quantity="two">2 Members</item>
        <item quantity="many">%d Members</item>
        <item quantity="other">%d Members</item>
    </plurals>
    <string name="title_activity_contributions">ContributionsActivity</string>


</resources>